Chain up to parent constructor in 'constructed' vfuncs

Since gtk+ commit
commit 9c37b3de7466a22d4c784657a86c522e2a4f118a
Author: Jasper St. Pierre <jstpierre@mecheye.net>
Date:   Thu Jun 26 18:22:42 2014 -0400

    gtk: Don't use GObjectClass.constructor

    Use the newer constructed instead, which has a fast path in GObject.

brasero crashes at startup. This is caused by some 'constructed'
implementations which don't' chain up to the parent class.

https://bugzilla.gnome.org/show_bug.cgi?id=732692